<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".useCase.movie_detail.MovieDetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/imageviewDetailPosterBackground"
            tools:src="@drawable/poster_a_star"
            android:scaleType="centerCrop"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:id="@+id/imageviewDetailPoster"
                tools:src="@drawable/poster_a_star"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/imageviewDetailPosterBackground"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textviewDetailTitle"
                    tools:text="Dump Title"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:text="75"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="@drawable/round_shape_score_green"
                    android:id="@+id/textviewDetailScore"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_overview"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailDescription"
                tools:text="@string/lorem"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_release"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailStatus"
                tools:text="English" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_original_language"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailoriginalLanguage"
                tools:text="English" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_runtime"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailRuntime"
                tools:text="2h 15m" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_release_information"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_release_information_layout"></TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_featured_crew"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_crew_layout"></TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_budget"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailBudget"
                tools:text="10000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_revenue"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewDetailRevenue"
                tools:text="10000000" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>